<package format="2">
  <name>qb_device_driver</name>
  <version>2.1.1</version>
  <description>
    This package contains a device-independent API wrapper for qbrobotics® devices.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbdevice-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbdevice-ros</url>
  <url type="website">http://wiki.ros.org/qb_device_driver</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>qb_device_srvs</depend>
  <depend>qb_device_utils</depend>

  <!--TODO: <test_depend>gtest</test_depend>-->
  <doc_depend>doxygen</doc_depend>
</package>