<package format="2">
  <name>qb_device_hardware_interface</name>
  <version>2.1.1</version>
  <description>
    This package contains a device-independent hardware interface for qbrobotics® devices.
  </description>
  <author>qbrobotics®</author>
  <maintainer email="alessandro.tondo@qbrobotics.com">Alessandro Tondo</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://bitbucket.org/qbrobotics/qbdevice-ros/issues</url>
  <url type="repository">https://bitbucket.org/qbrobotics/qbdevice-ros</url>
  <url type="website">http://wiki.ros.org/qb_device_hardware_interface</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>
  <depend>qb_device_msgs</depend>
  <depend>qb_device_srvs</depend>

  <test_depend>rostest</test_depend>
  <doc_depend>doxygen</doc_depend>
</package>